updates to intro page

--- a/index.qmd
+++ b/index.qmd
@@ -1,1 +1,3 @@
 # Introduction {.unnumbered}
+
+This Bookdown repository serves as a place to store my TidyTuesday submissions and showcase the code and deeper analysis on each dataset. As I continue to analyze the weekly datasets I'll upload the code here and link to the new page in my social media posts. Thanks for reading!
