--- a/week_11-28-2023.qmd
+++ b/week_11-28-2023.qmd
@@ -15,7 +15,10 @@ library(viridis)
 library(hrbrthemes)
 library(ggridges)
 library(lubridate)
+```
 
+```{r}
+#| results: hide
 tuesdata <- tidytuesdayR::tt_load('2023-11-28')
 
 drwho_episodes <- tuesdata$drwho_episodes
@@ -24,6 +27,8 @@ drwho_writers <- tuesdata$drwho_writers
 ```
 
 ## Data Cleaning
+
+First we join the data together in one flat table, then create a year variable for each episode based on when it was aired. We also turn the year variable into a factor so that it will be plotted correctly later on.
 
 ```{r}
 # join all data together
@@ -47,6 +52,8 @@ drwho_episodes$year_aired <- as.factor(drwho_episodes$year_aired)
 
 ## Ridgeline Plot
 
+Finally, we visualize the Dr. Who episode ratings by year the episodes were aired. An apparent decline in ratings can be seen as the show has progressed through 2022.
+
 ```{r}
 drwho_episodes %>% 
   group_by(year_aired) %>% 
@@ -54,14 +61,10 @@ drwho_episodes %>%
            fill = ..x..)) +
   geom_density_ridges_gradient(scale = 3, rel_min_height = 0.01) +
   scale_fill_viridis(name = "Rating", option = "D") +
-  
   labs(title = 'Ratings of Dr. Who Episodes by Year',
        x = "Rating",
        y = "Year Episode Aired") +
-  # theme_ipsum()+
-  
   theme(
-    
     panel.spacing = unit(0.1, "lines"),
     strip.text.x = element_text(size = 8),
     axis.title.x = element_text(size = 15),
